--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     background-color: #f4f4f9;
     color: #333;
+    
 }
 
 header {
@@ -29,7 +30,7 @@ section {
     padding: 20px;
     max-width: 800px;
     background: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
     margin-bottom: 20px;
 }
 
@@ -40,6 +41,7 @@ section {
     padding-bottom: 5px;
     margin-bottom: 10px;
     text-align: center;
+    text-decoration: underline;
 }
 a{
     color:white;
@@ -64,6 +66,9 @@ h3 {
     color: #2c3e50;
     margin-bottom: 10px;
     font-size: 1.2em;
+    text-align: center;
+    text-decoration: underline;
+    
 }
 .fa-brands fa-github{
     color: black;
@@ -83,5 +88,13 @@ h3 {
         font-size: 1em;
     }
     
+}
+.certs{
+    text-align: center;
+    list-style-type: none;
+}
+
+.college{
+    text-align: center;
 }
 
